# v86_savestreams

./: .gitignore  README.md  pyproject.toml  specification.md
tests/: test_savestreams.py
v86-savestreams/: savestreams.py
v86_savestreams/: __init__.py
