[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v86-savestreams"
version = "0.1.0"
description = "Efficient compression and decompression of v86 virtual machine save states"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sumit Shetye", email = "sshetye@ucsc.edu"}
]

dependencies = [
    "numpy>=1.18.0",
    "msgpack>=1.1.0",
    "dictdiffer",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
savestreams = "v86_savestreams:main"

[project.urls]
"Homepage" = "https://github.com/sumitshetye2/v86_savestreams"
"Bug Tracker" = "https://github.com/sumitshetye2/v86_savestreams/issues"

[tool.setuptools]
packages = ["v86_savestreams"]

[tool.pytest.ini_options]
testpaths = ["tests"]

